user location identifier

--- a/templates/qrcode/email__template.html
+++ b/templates/qrcode/email__template.html
@@ -135,7 +135,7 @@
 									Embeded Code: 
 									< iframe src="{{ qr_code.url }}" title="Survey" data-survey-id="{{ qr_code.pk }}" width="350" height="100%"> </iframe>
 								</p>
-								<p  id="hidden__country">{{qr_code.location}}</p>
+								<p  id="hidden__country">{{qr_code.country}}</p>
 								<!-- <div>
 									<input type="text" value={{ qr_code.url }} id="myInput">
 
