filter user location

--- a/templates/qrcode/feedback.html
+++ b/templates/qrcode/feedback.html
@@ -803,7 +803,7 @@
               >${region.name}
               <input
                 type="checkbox"
-                name="${region.name}"
+                name="regions"
                 id="${region.name}"
                 value="${region.name}"
               />
