selected country counter

--- a/templates/qrcode/feedback.html
+++ b/templates/qrcode/feedback.html
@@ -50,7 +50,8 @@
         overflow-y: scroll;
       }
       /* tags styling */
-      .country__tags__container {
+      .country__tags__container,
+      .region__tags__container {
         max-width: 400px;
       }
       .country__tag {
@@ -265,14 +266,12 @@
         height: 80px;
         width: 80px;
         position: relative;
-        
       }
       .upload__image__cover img {
         border-radius: 50%;
         max-width: 100px;
         max-height: 100px;
         cursor: pointer;
-        
       }
       .upload__image__cover input[type="file"] {
         background-color: blueviolet;
@@ -286,7 +285,6 @@
       }
       .form_control_image {
         position: relative;
-      
       }
       .form_control_image span {
         position: absolute;
@@ -303,11 +301,9 @@
         font-size: 0.9rem;
         padding-bottom: 0.4rem;
         color: gray;
-     
       }
       .form_control_image small {
         color: gray;
-      
       }
       .form_control input[type="text"],
       input[type="email"],
@@ -519,6 +515,7 @@
                 <span> <i class="fa fa-arrow-circle-down"></i></span>
               </p>
               <div class="regions__container">
+                <div class="region__tags__container"></div>
                 <input
                   class="region__search"
                   oninput="searchRegion()"
@@ -706,7 +703,7 @@
         }
       }
       (function () {
-        let countryList = []
+        let countryList = [];
         let countriesTagContainer = document.querySelector(
           ".country__tags__container"
         );
@@ -738,52 +735,61 @@
 
               <span class="checkmark"></span>
             </label>`;
-            //   const countryCheckBoxes = document.querySelectorAll(
-            //     "input[type=checkbox]"
-            //   );
-            //   countryCheckBoxes.forEach((checkBox) => {
-            //     // console.log(checkBox.value);
-            //     checkBox.addEventListener("change", function () {
-            //       loadRegion(checkBox.value);
-            //       if (checkBox.checked) {
-            //         countriesTagContainer.innerHTML += `<button class="country__tag">
-            //   ${checkBox.value} <span class="country__remover"><i class="fa fa-times-circle"></i
-            // ></span>
-            // </button>`;
-            //       }
-            //       deleteCountries(checkBox.checked);
-            //     });
-            //   });
+              //   const countryCheckBoxes = document.querySelectorAll(
+              //     "input[type=checkbox]"
+              //   );
+              //   countryCheckBoxes.forEach((checkBox) => {
+              //     // console.log(checkBox.value);
+              //     checkBox.addEventListener("change", function () {
+              //       loadRegion(checkBox.value);
+              //       if (checkBox.checked) {
+              //         countriesTagContainer.innerHTML += `<button class="country__tag">
+              //   ${checkBox.value} <span class="country__remover"><i class="fa fa-times-circle"></i
+              // ></span>
+              // </button>`;
+              //       }
+              //       deleteCountries(checkBox.checked);
+              //     });
+              //   });
             });
             const countryCheckBoxes = document.querySelectorAll(
-                "input[type=checkbox]"
-              );
-              countryCheckBoxes.forEach((checkBox) => {
-                // console.log(checkBox.value);
+              "input[type=checkbox]"
+            );
+            countryCheckBoxes.forEach((checkBox) => {
+              // console.log(checkBox.value);
 
-                checkBox.addEventListener("change", function () {
-                  if (checkBox.checked) {
-                    countryList.push(checkBox.value)
-                    let countryCounter = checkBox.value
-                    const result = countryList.filter((country)=>country===countryCounter).length
-                    console.table('country:',countryCounter,  'count:',result)
-                    if(result===1){
-                      loadRegion(checkBox.value);
-                      countriesTagContainer.innerHTML += `<button class="country__tag">
+              checkBox.addEventListener("change", function () {
+                if (checkBox.checked) {
+                  countryList.push(checkBox.value);
+                  toggleCountry.innerText = `${
+                    countryList.length === 1
+                      ? "1 country selected"
+                      : countryList.length + " countries selected"
+                  }`;
+                  let countryCounter = checkBox.value;
+                  const result = countryList.filter(
+                    (country) => country === countryCounter
+                  ).length;
+                  console.table("country:", countryCounter, "count:", result);
+                  if (result === 1) {
+                    loadRegion(checkBox.value);
+                    countriesTagContainer.innerHTML += `<button class="country__tag">
                         ${checkBox.value} <span class="country__remover">x</span>
                       </button>`;
-                    }
-                    
                   }
-                  deleteCountries(checkBox.checked);
-                });
+                }
+                deleteCountries(checkBox.checked);
               });
+            });
           });
       })();
     </script>
     <script>
       function loadRegion(country) {
         const regionsDataContainer = document.querySelector(".regions__label");
+        let regionsTagContainer = document.querySelector(
+          ".region__tags__container"
+        );
         const regionUrl = `https://100074.pythonanywhere.com/region/name/${country}/{{ user.username }}/{{ session_id }}/100014/`;
 
         fetch(regionUrl, {
