Email fixed and also responsive fixed

--- a/templates/qrcode/feedback.html
+++ b/templates/qrcode/feedback.html
@@ -462,10 +462,13 @@
                 />
               </div>
               <div class="form_control">
-                <select name="service" id="service" required>
-                  <option value="">--select your product/service--</option>
-                  <option value="2">two</option>
-                </select>
+                <input
+                  type="text"
+                  placeholder="enter your product/service"
+                  id="service"
+                  name="service"
+                  required
+                />
               </div>
               <div class="form_control">
                 <input
